cards overlap issue fixed

--- a/src/static/style/dashboard.css
+++ b/src/static/style/dashboard.css
@@ -1022,7 +1022,7 @@
     left: unset;
     width: -webkit-fill-available;
     border-radius: 34px;
-    top: 42rem;
+    top: 43rem;
     position: relative;
   }
 
